# trace-wave

./: .gitignore  LICENSE  README.md  README_CN.md  README_ES.md  README_JA.md  README_KO.md  pyproject.toml  showcase_trace.json
.github/workflows/: ci.yml
agent_trace/: __init__.py  cli.py
agent_trace/core/: __init__.py  context.py  decorators.py  models.py  span.py  tracer.py
agent_trace/dashboard/: __init__.py  server.py  trace_viewer.py  tui.py
agent_trace/examples/: __init__.py  demo_runner.py
agent_trace/exporters/: __init__.py  chrome_exporter.py  export.py  json_exporter.py
agent_trace/integrations/: __init__.py  anthropic_integration.py  langchain_integration.py  openai_integration.py
examples/: deepseek_agent_demo.py  multi_agent_demo.py  showcase_demo.py  simple_demo.py
tests/: test_decorators.py  test_exporters.py  test_models.py  test_tracer.py  test_tui.py
